# turbo-tv

./: .gitignore  .ocamlformat  Makefile  README.md  _config.yml  build.sh  dune-project  index.md
.github/workflows/: main.yml
lib/: dune  encoder.ml  tv.ml
lib/checker/: dependencyChecker.ml
lib/ir/: IR.ml  angelicFile.ml  assertion.ml  bigint.ml  constant.ml  constants.ml  control.ml  controlFile.ml  deopt.ml  exprMap.ml  heapnumber.ml  memory.ml  newmem.ml  number.ml  objects.ml  objmap.ml  output.ml  pointer.ml  registerFile.ml  schedule.ml  state.ml  strings.ml  taggedPointer.ml  type.ml  ub.ml  value.ml  valueOperator.ml
lib/ir/ value/: float64.ml
lib/ir/value/: float64.ml
lib/parser/: bracket.ml  instr.ml  opcode.ml  operands.ml  reduction.ml  types.ml
lib/semantics/: common.ml  machine.ml  semantics.ml  simplified.ml
lib/tv/: tv.ml
lib/typer/: typer.ml
lib/utils/: err.ml  printer.ml  utils.ml  z3utils.ml
lib/v8/: heapConstants.ml  machineType.ml  repr.ml  types.ml
scripts/: fetch-spec.py  helper.ml  opcode2ml.py  opcodes.txt  spec2ml.py  type2ml.py
specs/: back-compat-opcodes.spec  opcodes.spec
src/: IR.ml  dune  err.ml  instr.ml  machineType.ml  main.ml  memory.ml  opcode.ml  operand.ml  operands.ml  options.ml  reduction.ml  registerFile.ml  semantics.ml  tv.ml  utils.ml  value.ml  z3utils.ml
test/: after.ir  before.ir  strength_reduction.js  strength_reduction.txt
test/change_int31_to_tagged_signed/: fail_src.ir  fail_tgt.ir
test/num_expm1/: fail_src.ir  fail_tgt.ir  success_tgt.ir
test/number_to_int32/: .success_2_src.ir.swp  .success_2_tgt.ir.swp  success_2_src.ir  success_src.ir  success_tgt.ir
test/number_to_uint32/: success_2_src.ir  success_2_tgt.ir  success_tgt.ir
test/oob/: angelic.ir  angelic_np.ir  demonic_angelic.ir  demonic_angelic_np.ir  dune  oob.expected  oob.ir  oob_p.ir
test/regressor/: dune  regress-checked-tagged-to-float64-f64.expected  regress-load-field-map-header.expected  regress-object-is-smi.expected  regress-speculative-bigint-asintn.expected  regress_range_np.ir  regress_signedness_np.ir  regress_tagged_signed_np.ir
test/regressor/consecutive-addition-0-35/: tgt.ir
test/regressor/math-imul-5-50/: src.ir  tgt.ir
test/regressor/regress-boolean-not/: src.ir  tgt.ir
test/regressor/regress-branch/: src.ir  tgt.ir
test/regressor/regress-call-angelic-value/: src.ir
test/regressor/regress-change-bit-to-tagged/: src.ir  tgt.ir
test/regressor/regress-check-number-oddball-map/: tgt.ir
test/regressor/regress-checked-tagged-to-float64-f64/: tgt.ir
test/regressor/regress-external-ptr/: src.ir  tgt.ir
test/regressor/regress-heap-constant-objmap-parse/: src.ir
test/regressor/regress-int32-add-with-ovf/: src.ir  tgt.ir
test/regressor/regress-int32-mod/: src.ir  tgt.ir
test/regressor/regress-int64-1-35/: src.ir  tgt.ir
test/regressor/regress-load-field-angelic-tagged-signed/: rdc.ce  rdc.ir  src.ir  tgt.ir
test/regressor/regress-load-field-angelic-tagged-signed-2/: src.ir
test/regressor/regress-load-field-map-header/: src.ir
test/regressor/regress-math-imul-5-50/: src.ir
test/regressor/regress-number-tagged-signed/: src.ir  tgt.ir
test/regressor/regress-object-is-smi/: tgt.ir
test/regressor/regress-oddball-map/: src.ir  tgt.ir
test/regressor/regress-oddball-map-eq/: src.ir  tgt.ir
test/regressor/regress-schedule-dead/: src.ir
test/regressor/regress-speculative-bigint-asintn/: rdc.ir  src.ir  tgt.ir
test/regressor/regress-speculative-number-equal/: src.ir  tgt.ir
test/regressor/regress-speculative-number-modulus/: src.ir  tgt.ir
test/regressor/regress-speculative-number-multiply/: src.ir  tgt.ir
test/regressor/regress-speculative-number-shift-right-boolean-input/: src.ir  tgt.ir
test/regressor/regress-store-element-ovfl/: src.ir
test/regressor/regress-store-field-ovfl/: src.ir
test/regressor/regress-truncate-tagged-to-word32/: src.ir  tgt.ir
test/regressor/regress-truncate-tagged-to-word32-oddball/: src.ir  tgt.ir
test/regressor/regress-type-check-for-angelic-value/: src.ir
test/schedule/: dune  read-read.ir  read-write-branch.ir  read-write.ir
test/select/: fail_src.ir  fail_tgt.ir  success_tgt.ir
test/typer/: .range_np.ir.swp  expm_mz_np.ir  mz_np.ir  mz_p.ir  nan_np.ir  nan_p.ir  range_np.ir  range_p.ir  regress_float_as_int_np.ir  select_range_np.ir  select_range_p.ir  speculative_safe_integer_add_deopt_guard_np.ir  uint32_np.ir  union_np.ir  union_p.ir
test/ub/: angelic.ir  demonic_angelic.ir  oob_possible.ir  typer_error.ir
test/unit/: NumberTest.ml  bigintTest.ml  dune  helper.ml  machineTest.ml  numberTest.ml  simplifiedTest.ml  stringTest.ml  typerTest.ml
test/unit-io/: dune  select-success.expected
test/unit-io/select-fail/: tgt.ir
test/unit-io/select-success/: src.ir  tgt.ir
tmpl/: instr.mlt  opcode.mlt
