(include_subdirs unqualified)

(library
 (name lib)
 (modules
  ;parser
  bracket
  opcode
  operands
  instr
  ;ir
  IR
  objects
  constants
  taggedPointer
  control
  registerFile
  ub
  state
  objmap
  memory
  type
  value
  float64
  deopt
  ;tv
  tv
  ;v8
  machineType
  types
  ;semantics
  common
  machine
  simplified
  ;typer
  typer
  ;utils
  printer
  utils
  err
  z3utils)
 (libraries core_unix cmdliner ocamlgraph str re z3))
