(include_subdirs unqualified)

(library
 (name lib)
 (modules
  ;parser
  bracket
  opcode
  operands
  instr
  ;ir
  IR
  objects
  number
  constant
  control
  angelicFile
  controlFile
  registerFile
  ub
  schedule
  state
  objmap
  memory
  type
  value
  valueOperator
  deopt
  exprMap
  bigint
  ;tv
  encoder
  tv
  ;v8
  machineType
  types
  ;semantics
  common
  machine
  simplified
  ;typer
  typer
  ;utils
  printer
  utils
  err
  z3utils)
 (libraries core_unix cmdliner ocamlgraph str re z3))
