(library
 (name helper)
 (modules helper)
 (libraries lib oUnit))

(test
 (name typerTest)
 (modules typerTest)
 (libraries helper))

(test
 (name simplifiedTest)
 (modules simplifiedTest)
 (libraries helper))

(test
 (name machineTest)
 (modules machineTest)
 (libraries helper))

(test
 (name bigintTest)
 (modules bigintTest)
 (libraries helper))

(test
 (name stringTest)
 (modules stringTest)
 (libraries helper))

(test
 (name numberTest)
 (modules numberTest)
 (libraries helper))
